# UBL-Containers

./: .dockerignore  .env.example  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DOCS_MANIFEST.sha256.txt  Dockerfile  MEGA_MANIFEST.json  RAILWAY.md  README.md  SPEC_MANIFEST.json  check.sh  railway.json  railway.toml
clients/cli/: package.json  tsconfig.json
clients/cli/src/: index.ts
clients/cli/src/commands/: repo.ts
infra/wg/: peers.example.conf
kernel/rust/: Cargo.toml
kernel/rust/ubl-ledger/src/: lib.rs
kernel/rust/ubl-membrane/: Cargo.toml
kernel/rust/ubl-membrane/src/: lib.rs
kernel/rust/ubl-pact/: Cargo.toml
kernel/rust/ubl-pact/src/: lib.rs
kernel/rust/ubl-policy-vm/: Cargo.toml
kernel/rust/ubl-policy-vm/src/: lib.rs
kernel/rust/ubl-policy-vm/tests/: smoke.rs
kernel/rust/ubl-server/: Cargo.toml
kernel/rust/ubl-server/src/: auth.rs  db.rs  id_routes.rs  main.rs
manifests/: containers.json
pr28-ubl-id-expanded/: README.md
pr28-ubl-id-expanded/openapi/: ubl-id.yaml
pr28-ubl-id-expanded/sdk/ts/: ubl-id.ts
pr28-ubl-id-expanded/server/rust/: id_db.rs  id_routes.rs
pr28-ubl-id-expanded/sql/: ubl_id.sql
sql/: README.md
